Now working - WP conf page shows on the host

--- a/.gitignore
+++ b/.gitignore
@@ -17,20 +17,18 @@
 /wp-*.php
 /xmlrpc.php
 
-# Configuration
-wp-config.php
-
-# Example themes
-/wp-content/themes/twenty*/
-
-# Example plugin
-/wp-content/plugins/hello.php
-
-# Uploads
-/wp-content/uploads/
+# Artifacts
+*.out
 
 # Log files
+logs
 *.log
+
+# Wordpress Data
+wp_data/
+
+# Temporary files
+*.tmp
 
 # htaccess
 /.htaccess
