--- a/docker/dev/.env
+++ b/docker/dev/.env
@@ -3,6 +3,8 @@
 # THey can be loaded by speciying this file in the ENV_FILE variable, either in your shell environment
 # or in the .env file.
 STAGE=dev
+WP_ENVIRONMENT_TYPE = development
+
 DOCKER_COMPOSE_FILE := ${DOCKER_COMPOSE_FILE},docker/${STAGE}/docker-compose.yml,docker/${STAGE}/services/wordpress/docker-compose.yml,docker/${STAGE}/services/nginx/docker-compose.yml
 DOCKER_COMPOSE_ENV_FILE := ${DOCKER_COMPOSE_ENV_FILE},docker/${STAGE}/.env,docker/${STAGE}/services/wordpress/.env,docker/${STAGE}/services/nginx/.env
 NGINX_ENV_FILE := ${NGINX_ENV_FILE},docker/${STAGE}/services/nginx/.env
@@ -33,7 +35,7 @@ WP_MAX_MEMORY_LIMIT = 512M
 WP_DEBUG = true
 WP_DEBUG_LOG_DIR = /var/www/html/wp-content/logs
 WP_DEBUG_LOG = ${WP_DEBUG_LOG_DIR}/debug.log
-WP_DEBUG_DISPLAY = false
+WP_DEBUG_DISPLAY = true
 WP_DEPLOY_RESOURCES_LIMITS_CPUS = 1.5
 WP_DEPLOY_RESOURCES_LIMITS_MEMORY = 1024M
 WP_DEPLOY_RESOURCES_RESERVATIONS_CPUS = 0.75
