--- a/docker/base/.env
+++ b/docker/base/.env
@@ -4,6 +4,8 @@
 CONF_DIR = ${CWD}/docker/${STAGE}/conf # When running on host, this is usually a relative path
 CODE_DIR = ${CWD} # When running on host, this is usually a relative path
 BIN_DIR = ${CWD}/docker/bin # When running on host, this is usually a relative path
+WP_PHP_SRC_DIR = ${CWD}/docker/base/services/wordpress/php
+
 
 DOCKER_NETWORK = ${PROJECT_NAME}_network
 DOCKER_NETWORK_DRIVER = bridge
@@ -44,7 +46,7 @@ FASTCGI_PORT = 9000
 DB_NAME = ${SERVICE_NAME}
 
 # Extra php files for wordpress
-WP_PHP_EXTRA = /opt/php-extra
+WP_PHP_EXTRA = /opt/php-extra # on the client side
 
 NGINX_EXTRA_HOSTS=${APP_DOMAIN}:127.0.0.1
 
@@ -60,3 +62,24 @@ REDIS_HEALTHCHECK_TIMEOUT = 5s
 REDIS_HEALTHCHECK_RETRIES = 5
 REDIS_HEALTHCHECK_START_PERIOD = 20s # Allow time for Redis to initialize
 
+# Wordpress general settings
+WP_HOME = https://${APP_DOMAIN}:${DOCKER_HOST_HTTPS_PORT}
+WP_SITEURL = https://${APP_DOMAIN}:${DOCKER_HOST_HTTPS_PORT}
+WP_DEBUG = true
+WP_DEBUG_DISPLAY = true
+WP_LANG = de_DE
+# Wordpress security and optimization constants
+WP_ENVIRONMENT_TYPE = local     # Possible values are ‘local’, ‘development’, ‘staging’, and ‘production’
+WP_DISALLOW_FILE_EDIT = true    # Set to true to disable file editing in WordPress
+WP_FORCE_SSL_ADMIN = false      # Set to true to force SSL connections to the WordPress admin area
+WP_FORCE_SSL_LOGIN = false      # Set to true to force SSL connections to the WordPress login area
+WP_ALLOW_REPAIR = false         # Set to true to allow automatic database repair
+WP_POST_REVISIONS = 5           # Set the number of revisions to keep for each post
+WP_AUTOSAVE_INTERVAL = 300      # Set the interval in seconds for automatic database save
+WP_XMLRPC_REQUEST = false       # Set to true to allow XML-RPC requests
+WP_AUTOMATIC_UPDATER_DISABLED = true # Set to true to disable automatic updates
+WP_HEARTBEAT_DISABLED = false      # Set to true to disable Heartbeat
+WP_REST_API_DISABLED = false       # Set to true to disable the REST API - this is useful for plugins that require access to the database
+
+# WordPress specific settings
+WORDPRESS_TABLE_PREFIX = ${SERVICE_NAME}_
