--- a/docker/dev/services/wordpress/.env
+++ b/docker/dev/services/wordpress/.env
@@ -1,7 +1,7 @@
 WP_DEBUG = true
 WP_DEBUG_LOG_DIR = /var/www/html/wp-content/logs
 WP_DEBUG_LOG = ${WP_DEBUG_LOG_DIR}/debug.log
-WP_DEBUG_DISPLAY = false
+WP_DEBUG_DISPLAY = true
 # In development environment, this should be set to off
 # since we only have a self-signed SSL certificate
 NGINX_SSL_STAPLING = off  
