--- a/docker/dev/services/wordpress/docker-compose.yml
+++ b/docker/dev/services/wordpress/docker-compose.yml
@@ -10,7 +10,7 @@ services:
 #      WP_DEBUG_LOG: "${WP_DEBUG_LOG:-true}"
       WP_DEBUG_LOG: /var/www/html/wp-content/logs/debug.log
       WP_DEBUG_LOG_DIR: ${WP_DEBUG_LOG_DIR:-/var/www/html/wp-content/logs}
-      WP_DEBUG_DISPLAY: ${WP_DEBUG_DISPLAY:-false}
+      WP_DEBUG_DISPLAY: ${WP_DEBUG_DISPLAY:-true}
     volumes:
       # Bind mount for WordPress debug log
 #      - ${LOG_DIR:-${CWD}/log/${STAGE}}/wordpress/:${WP_DEBUG_LOG_DIR:-/var/www/html/wp-content/logs}
