--- a/docker/base/.env
+++ b/docker/base/.env
@@ -76,10 +76,10 @@ WP_FORCE_SSL_LOGIN = false      # Set to true to force SSL connections to the Wo
 WP_ALLOW_REPAIR = false         # Set to true to allow automatic database repair
 WP_POST_REVISIONS = 5           # Set the number of revisions to keep for each post
 WP_AUTOSAVE_INTERVAL = 300      # Set the interval in seconds for automatic database save
-WP_XMLRPC_REQUEST = false       # Set to true to allow XML-RPC requests
+# WP_XMLRPC_REQUEST = true       # Set to true to allow XML-RPC requests
 WP_AUTOMATIC_UPDATER_DISABLED = true # Set to true to disable automatic updates
 WP_HEARTBEAT_DISABLED = false      # Set to true to disable Heartbeat
 WP_REST_API_DISABLED = false       # Set to true to disable the REST API - this is useful for plugins that require access to the database
-
+WP_DISALLOW_FILE_MODS = false     # Set to true to disable file modifications
 # WordPress specific settings
 WORDPRESS_TABLE_PREFIX = ${SERVICE_NAME}_
